2016-02-18  Oliver Lemke  <olemke@core-dump.info>

	* typhon/__init__.py: Post-upload version bump to 0.2.5.

2016-02-18  Oliver Lemke  <olemke@core-dump.info>

	* ChangeLog: Got lost in previous commit.

	* setup.py:

	Change status from Planning to Alpha.

	Remove Python 3.3 compatibility.

	Add setuptools and matplotlib to requirements. Add version numbers for
	numpy and scipy.

	* typhon/arts/__init__.py, doc/arts.rst:

	Move module description from doc to module. Add typhon.arts as
	automodule in doc.

	* typhon/arts/xml/__init__.py: Shorten module docstring.

	* typhon/arts/griddedfield.py:

	Lazy import of netCDF4 to avoid global dependency.

2016-02-17  Oliver Lemke  <olemke@core-dump.info>

	* doc/cm.rst, doc/xml.rst: Renamed some headers.

	* typhon/arts/sensor.py: Fix typos.

	* typhon/arts/xml/__init__.py: Fix term.

2016-02-17  Oliver Lemke  <olemke@core-dump.info>

	* doc/index.rst: Switch API/Dev order. Add short.description.

2016-02-17  Oliver Lemke  <olemke@core-dump.info>

	* typhon/__init__.py: Post-upload version bump to 0.2.4.

2016-02-17  Oliver Lemke  <olemke@core-dump.info>

	* DESCRIPTION.rst: Adapt.

2016-02-16  Lukas Kluft <lukas.kluft@gmail.com>

	* doc/pyplots/plot_density.py, doc/pyplots/plot_phase.py,
	doc/pyplots/plot_speed.py, doc/pyplots/plot_temperature.py:

	Use pcolormesh instead of contourf to prevent the interpolation of data
	points.

	Wind directions are now displayed with quivers instead of barbs.

	Use a finer map resolution for better look.

2016-02-16  Oliver Lemke  <olemke@core-dump.info>

	* typhon/__init__.py: Increased version to 0.2.3 after upload to PyPi.

2016-02-16  Oliver Lemke  <olemke@core-dump.info>

	* doc/Makefile: Add target to upload docs for my own convenience.

2016-02-16  Oliver Lemke  <olemke@core-dump.info>

	* doc/requirements.rtd: Removed again. The automatic build
	of the documentation through the readthedocs.org service fails if