@@ -11,7 +11,7 @@ from typhon.cm import mpl_colors
 
 x = np.linspace(0, 10, 100)
 
-fig, ax = plt.subplots(figsize=(10, 8))
+fig, ax = plt.subplots(figsize=(10, 6))
 ax.set_prop_cycle(color=mpl_colors('qualitative1', 20))
 for c in np.arange(20):
     ax.plot(x, (15 + x) * c, linewidth=3)
