@@ -9,7 +9,7 @@ import matplotlib.pyplot as plt
 from typhon.cm import mpl_colors
 
 
-fig, ax = plt.subplots(figsize=(10, 8))
+fig, ax = plt.subplots(figsize=(10, 6))
 ax.set_prop_cycle(color=mpl_colors('qualitative2', 5))
 for c in np.arange(5):
     X = np.random.randn(100)/2
